feat: add cdr endpoint
This endpoint makes it possible to paginate through call detail records.
